[workspace]
resolver = "2"
members = ["seer-core", "seer-cli", "seer-py"]

[workspace.package]
version = "0.1.3"
edition = "2021"
authors = ["Zac Roach"]
license = "MIT"
repository = "https://github.com/TheZacillac/seer"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# DNS resolution
hickory-resolver = { version = "0.24", features = ["dnssec-ring"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "2"
anyhow = "1"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# CLI
rustyline = "14"
colored = "2"
indicatif = "0.17"
comfy-table = "7"
clap = { version = "4", features = ["derive"] }

# Python bindings
pyo3 = { version = "0.23", features = ["extension-module", "abi3-py39"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
futures = "0.3"
async-trait = "0.1"
once_cell = "1"
regex = "1"
url = "2"
base64 = "0.22"

# TLS/SSL certificate handling
native-tls = "0.2"
tokio-native-tls = "0.3"
