[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "seer-api"
version = "0.1.86"
description = "FastAPI server and MCP integration for Seer domain utilities"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.109",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.0",
    "mcp>=1.0",
    "seer>=0.1.86",
    "slowapi>=0.1.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "httpx>=0.26",
]

[project.scripts]
seer-api = "seer_api.main:run"
seer-mcp = "seer_api.mcp.server:run"

[tool.hatch.build.targets.wheel]
packages = ["seer_api"]
