[package]
name = "seer-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Interactive CLI for Seer domain name utilities"
readme = "../README.md"
keywords = ["whois", "rdap", "dns", "domain", "cli"]
categories = ["command-line-utilities", "network-programming"]

[[bin]]
name = "seer"
path = "src/main.rs"

[dependencies]
seer-core = { version = "0.1.3", path = "../seer-core" }
tokio = { workspace = true }
rustyline = { workspace = true }
colored = { workspace = true }
indicatif = { workspace = true }
comfy-table = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
dirs = "5"
