[package]
name = "seer-py"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Python bindings for Seer domain name utilities"

[lib]
name = "seer"
crate-type = ["cdylib"]

[dependencies]
seer-core = { version = "0.10.1", path = "../seer-core" }
pyo3 = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }

[features]
default = []
extension-module = ["pyo3/extension-module"]
abi3-py39 = ["pyo3/abi3-py39"]
